--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ Description: A basic starter theme for the Genesis Framework with BrowserSync su
 Version: 1.0
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
+
+Template: genesis
+Template Version: 2.2.7
+
 Tags: genesis framework, starter theme
 Text Domain: company-front
 */
