Add default partials

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -3,3 +3,10 @@
 //=========================================//
 //    Jordan Pakrosnis | JordanPak.com     //
 //=========================================//
+
+// Normalize Stuff
+@import "normalize";
+
+// Vars & Mixins
+@import "variables";
+@import "mixins";
