--- a/css/style.css
+++ b/css/style.css
@@ -352,3 +352,183 @@ table {
 td,
 th {
   padding: 0; }
+
+/*=====================================
+=            Accessibility            =
+=====================================*/
+/*----------  Screen Reader Text  ----------*/
+.screen-reader-text,
+.screen-reader-text span,
+.screen-reader-shortcut {
+  position: absolute !important;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  width: 1px;
+  border: 0;
+  overflow: hidden; }
+
+.screen-reader-text:focus,
+.screen-reader-shortcut:focus,
+.genesis-nav-menu .search input[type="submit"]:focus,
+.widget_search input[type="submit"]:focus {
+  clip: auto !important;
+  height: auto;
+  width: auto;
+  display: block;
+  font-size: 1em;
+  font-weight: bold;
+  padding: 15px 23px 14px;
+  color: black;
+  background: #fff;
+  z-index: 100000;
+  /* Above WP toolbar. */
+  text-decoration: none;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.7); }
+
+.more-link {
+  position: relative; }
+
+/*----------  Skip Links  ----------*/
+.genesis-skip-link {
+  margin: 0; }
+  .genesis-skip-link li {
+    height: 0;
+    width: 0;
+    list-style: none; }
+  .genesis-skip-link a {
+    border-bottom: 0; }
+    .genesis-skip-link a:hover {
+      background: white; }
+
+/* Display outline on focus */
+:focus {
+  box-shadow: 0;
+  outline: rgba(0, 0, 0, 0.2) solid 2px; }
+
+input,
+select,
+textarea {
+  background-color: #fff;
+  border-radius: 0;
+  border: 1px solid #ddd;
+  color: #333;
+  padding: 16px;
+  width: 100%; }
+
+input:focus,
+textarea:focus {
+  border: 1px solid #999;
+  outline: none; }
+
+input[type="checkbox"],
+input[type="image"],
+input[type="radio"] {
+  width: auto; }
+
+input:not([type="checkbox"]),
+input:not([type="image"]),
+input:not([type="radio"]) {
+  -webkit-appearance: none;
+  /* Remove iOS styles */ }
+
+::-moz-placeholder {
+  color: #333;
+  font-weight: 400;
+  opacity: 1; }
+
+::-webkit-input-placeholder {
+  color: #333;
+  font-weight: 400; }
+
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"],
+.button {
+  border: 3px solid currentColor;
+  cursor: pointer;
+  font-family: sans-serif;
+  font-weight: 700;
+  padding: 16px 24px;
+  text-transform: uppercase;
+  width: auto; }
+
+button:hover,
+input:hover[type="button"],
+input:hover[type="reset"],
+input:hover[type="submit"],
+.button:hover,
+button:focus,
+input:focus[type="button"],
+input:focus[type="reset"],
+input:focus[type="submit"],
+.button:focus {
+  background-color: white;
+  color: #fff; }
+
+.button {
+  display: inline-block; }
+
+/*----------  Search Form  ----------*/
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button {
+  display: none; }
+
+.search-form {
+  overflow: hidden; }
+
+.site-header .search-form {
+  float: right; }
+
+.entry-content .search-form,
+.site-header .search-form {
+  width: 50%; }
+
+.genesis-nav-menu .search input[type="submit"],
+.widget_search input[type="submit"] {
+  border: 0;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  position: absolute;
+  width: 1px; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  line-height: 2;
+  margin-bottom: 40px;
+  width: 100%; }
+
+tbody {
+  border-bottom: 1px solid #ddd; }
+
+td,
+th {
+  text-align: left; }
+
+td {
+  border-top: 1px solid #ddd;
+  padding: 6px 0; }
+
+th {
+  font-weight: 400; }
+
+embed,
+iframe,
+img,
+object,
+video,
+.wp-caption {
+  max-width: 100%; }
+
+img {
+  height: auto; }
+
+.featured-content img,
+.gallery img {
+  width: auto; }
+
+.wp-caption {
+  margin: 0; }
