Add default WordPress Styles - Compile

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -16,6 +16,7 @@
 // General
 @import "typography";
 @import "structure";
+@import "wordpress";
 @import "forms";
 @import "tables";
 @import "objects";
