--- a/css/style.css
+++ b/css/style.css
@@ -405,6 +405,7 @@ th {
   box-shadow: 0;
   outline: rgba(0, 0, 0, 0.2) solid 2px; }
 
+/* @include css-gradient(#dfdfdf,#f8f8f8); */
 .breakpoint-test {
   display: none;
   display: block;
@@ -487,6 +488,71 @@ th {
     @media (min-width: 1440px) {
       .breakpoint-test .size::after {
         content: "(1440px)"; } }
+
+a.aligncenter img {
+  display: block;
+  margin: 0 auto; }
+
+a.alignnone {
+  display: inline-block; }
+
+.alignleft {
+  float: left;
+  text-align: left; }
+
+.alignright {
+  float: right;
+  text-align: right; }
+
+a.alignleft,
+a.alignnone,
+a.alignright {
+  max-width: 100%; }
+
+img.centered,
+.aligncenter {
+  display: block;
+  margin: 0 auto 24px; }
+
+img.alignnone,
+.alignnone {
+  margin-bottom: 12px; }
+
+a.alignleft,
+img.alignleft,
+.wp-caption.alignleft {
+  margin: 0 24px 24px 0; }
+
+a.alignright,
+img.alignright,
+.wp-caption.alignright {
+  margin: 0 0 24px 24px; }
+
+.wp-caption-text {
+  font-size: 14px;
+  font-size: 1.4rem;
+  font-style: italic;
+  text-align: center; }
+
+.entry-content p.wp-caption-text {
+  margin-bottom: 0; }
+
+.entry-content .wp-audio-shortcode,
+.entry-content .wp-playlist,
+.entry-content .wp-video {
+  margin: 0 0 28px; }
+
+#wpadminbar {
+  position: fixed !important; }
+
+.avatar {
+  float: right; }
+
+.alignleft .avatar {
+  margin-left: 24px; }
+
+.alignright .avatar {
+  margin-left: 24px; }
 
 input,
 select,
